# pokemon

./: .gitignore  docker-compose.yml  justfile  pyproject.toml
cypher/: example.cypher
notebooks/: 1-preprocess.ipynb  2-pokemon-knowledgebase.ipynb  3-graphrag.ipynb  graphrag.ipynb  pokemon-knowledgebase.ipynb  preprocess.ipynb
src/pokemon/features/: image.py  text.py
