[project]
name = "pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "neo4j-graphrag>=1.2.0",
    "neo4j>=5.26.0",
    "openai>=1.54.3",
    "pandas>=2.2.3",
    "pyarrow>=18.0.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
